課題の動作を全て確認したため提出

--- a/practice/src/main/resources/templates/view.html
+++ b/practice/src/main/resources/templates/view.html
@@ -98,7 +98,7 @@
 	</table>
 	<br>
 	<br>
-	<a th:href="@{/admin/contacts/{id}/delete(id=*{id})}" onclick="return confirm('本当に削除しますか？');">このレコードを削除する</a>
+	<a th:href="@{/admin/contacts/{id}/delete(id=*{id})}" onclick="return confirm('レコードを削除してよろしいですか？');">このレコードを削除する</a>
 	<br>
 	<a href="/admin/contacts">一覧に戻る</a>
 	<br>
